# Bad_Apple_Spectrogram

./: .gitignore  Makefile  README.md  bad_apple.ipynb  pyproject.toml
