[tool.poetry]
name = "bad_apple"
version = "0.1.0"
description = ""
authors = ["Hiroya-W <hyuyukun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
yt-dlp = "^2021.11.10"
opencv-python = "^4.5.4"
tqdm = "^4.62.3"
scipy = "^1.7.3"
matplotlib = "^3.5.0"
librosa = "^0.8.1"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
